2006-12-30  Grigory Trenin  <gtrenin@gmail.com>

	* help.c (startpoint): Remove global variable and all references
	to it.
	(select_prev_link): Remove the first argument.
	Keep searching until a link is found or end of node delimiter is
	reached.
	(help_handle_key): Reflect the changes above.
	Remove an unneeded check.

2006-12-30  Pavel Tsekov  <ptsekov@gmx.net>

	* view.c (view_file_load_data): Do not to attempt to  seek
	beyond the end of file. Patch by Andrzej Zaborowski.
	(view_moveto_addr_cmd): Display a warning message if the
	user specified an invalid offset.

2006-12-21  Pavel Tsekov  <ptsekov@gmx.net>

	* fsusage.c: Remove references to HAVE_INFOMOUNT.

2006-12-21  Pavel Tsekov  <ptsekov@gmx.net>

	* fsusage.h: Update from gnulib.
	* fsusage.c: Likewise.

2006-12-21  Pavel Tsekov  <ptsekov@gmx.net>

	* fsusage.h: Resurrect.
	* fsusage.c: Likewise.

2006-12-10  Pavel Tsekov  <ptsekov@gmx.net>

	* view.c (regexp_search): Keep the search string in a global
	variable so that it can be reused when viewing another file.
	Do not use the same variable to hold the search string for 
	both the "Search" and "Regexp Search" functions.
	(view_normal_search_cmd): Likewise.

2006-11-27  Leonard den Ottolander  <leonard den ottolander nl>

	* subshell.c (subshell_name_quote): Bash < 2.05b (3-digit octals in
	echo_e_cmd) no longer supported.

2006-11-08  Egmont Koblinger  <egmont@uhulinux.hu>

	* key.c (get_event): Eliminate timeouts on window resize event.
	* layout.c (change_screen_size): Set winch_flag to 0 on entrance not
	exit of function.

2006-09-25  Pavel Tsekov  <ptsekov@gmx.net>

	* layout.c (layout_do_change): Remove global variable.
	(layout_cmd): Reflect the changes above.
	(layout_change): Ditto.

2006-09-18  Pavel Tsekov  <ptsekov@gmx.net>

	* main.c (xtoolkit_panel_setup): Remove - it is a noop.
	(setup_panels_and_run_mc): Eliminate references to 
	`xtoolkit_panel_setup'.

2006-09-18  Pavel Tsekov  <ptsekov@gmx.net>
